<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.htrucker</groupId>
    <artifactId>jmorphy2-parent</artifactId>
    <version>0.4.0</version>
    <packaging>pom</packaging>
    <name>jmorphy2 (parent)</name>
    <description>Java port of pymorphy2 - Maven multi-module build</description>

    <modules>
        <module>jmorphy2-core</module>
        <module>jmorphy2-dicts-ru</module>
        <module>jmorphy2-dicts-uk</module>
        <module>jmorphy2-nlp</module>
        <module>jmorphy2-lucene</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>

        <!-- es.version 7.1.0 resolved to Lucene 8.0.0 in the old Gradle map; pinned directly here -->
        <lucene.version>10.4.0</lucene.version>

        <commons-io.version>2.4</commons-io.version>
        <commons-codec.version>1.11</commons-codec.version>
        <jackson.version>3.0.2</jackson.version>
        <junit.version>4.11</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.htrucker</groupId>
                <artifactId>jmorphy2-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.htrucker</groupId>
                <artifactId>jmorphy2-core</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>com.htrucker</groupId>
                <artifactId>jmorphy2-nlp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.htrucker</groupId>
                <artifactId>jmorphy2-lucene</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.htrucker</groupId>
                <artifactId>jmorphy2-dicts-ru</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.htrucker</groupId>
                <artifactId>jmorphy2-dicts-uk</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>25</release>
                        <compilerArgument>-parameters</compilerArgument>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <excludes>
                            <exclude>**/*Benchmark*</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
